--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
 <blockquote>
 <p><strong>BITMAP</strong> =&gt; <strong>Satromizer</strong> :: <strong>3D</strong> =&gt; <strong>YOLKALYZER</strong></p>
 </blockquote>
+<p><img src="http://farm9.staticflickr.com/8017/7194214842_4f3e9385f0_o.png"></p>
+<p>turns into</p>
+<p><img src="http://farm6.staticflickr.com/5470/7194214902_0dc2497af6_o.png"></p>
 
 <h3>USAGE:</h3>
 
