--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                   <li><code>sudo gem install bundler</code></li>
                   <li>Confirm with password.</li>
               </ul></li>
-              <li>with <code>[rbenv](https://github.com/sstephenson/rbenv)</code>:
+              <li>with <a href="https://github.com/sstephenson/rbenv"><code>rbenv</code></a>:
 
               <ul>
                   <li><code>rbenv exec gem install bundler</code></li>
@@ -79,7 +79,6 @@
           <li><p>Run the script.
           <code>ruby yolkalyzer.rb mesh/model.dae mesh/fuckedupmodel.dae</code></p></li>
       </ol>
-
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/yyolk">yyolk</a></p>
