--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
       </ol>
       </section>
       <footer>
-        <p>This project is maintained by <a href="https://github.com/yyolk">yyolk</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+        <p><small>This project is maintained by <a href="https://github.com/yyolk">yyolk</a></small></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a>, modified by <span id="YOLK"><a href="http://yolk.cc">YOLK</a></span></small></p>
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
