added unobvious link to Satromizer

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="wrapper">
       <header>
         <h1>YOLKALYZER</h1>
-        <p>Create glitch'd texture'd DAE files akin to Satromizer</p>
+        <p>Create glitch'd texture'd DAE files akin to <a href="http://jonsatrom.com/satromizer/">Satromizer</a></p>
         <p class="view"><a href="https://github.com/yyolk/yolkalyzer">View the Project on GitHub <small>yyolk/yolkalyzer</small></a></p>
         <ul>
           <li><a href="https://github.com/yyolk/yolkalyzer/zipball/master">Download <strong>ZIP File</strong></a></li>
