--- a/index.html
+++ b/index.html
@@ -35,15 +35,13 @@
           <p><strong>BITMAP</strong> =&gt; <strong>Satromizer</strong> :: <strong>3D</strong> =&gt; <strong>YOLKALYZER</strong></p>
       </blockquote>
 
-      <figure>
-      <img src="http://farm9.staticflickr.com/8017/7194214842_4f3e9385f0_o.png" alt="" /></figure>
+      <figure><iframe width='666' height='500' src='http://3dfile.io/Wf5b1v?embed=true#file-1' frameborder='0'></iframe></figure>
 
 
 
       <p>turns into </p>
 
-      <figure>
-      <img src="http://farm6.staticflickr.com/5470/7194214902_0dc2497af6_o.png" alt="" /></figure>
+      <figure><iframe width='666' height='500' src='http://3dfile.io/IJs2mk?embed=true#file-1' frameborder='0'></iframe></figure>
 
 
 
