remove background image

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>YOLKALYZER</h1>
+        <h1><img src="http://farm9.staticflickr.com/8065/8190121851_794baab672_o.jpg" alt="yolkalyzer" width="200"></h1>
         <p>Create glitch'd texture'd DAE files akin to <a href="http://jonsatrom.com/satromizer/">Satromizer</a></p>
         <p class="view"><a href="https://github.com/yyolk/yolkalyzer">View the Project on GitHub <small>yyolk/yolkalyzer</small></a></p>
         <ul>
