--- a/index.html
+++ b/index.html
@@ -53,25 +53,9 @@
           <li><p>Open the <code>Terminal.app</code> and enter the following commands.</p></li>
           <li><p>Clone the repo
           <code>git clone git://github.com/yyolk/yolkalyzer.git</code></p></li>
-          <li>Install <a href="http://gembundler.com/">Bundler</a>
-
-          <ul>
-              <li>System Ruby (Leopard, Snow Leopard, Lion etc…)
-
-              <ul>
-                  <li><code>sudo gem install bundler</code></li>
-                  <li>Confirm with password.</li>
-              </ul></li>
-              <li>with <a href="https://github.com/sstephenson/rbenv"><code>rbenv</code></a>:
-
-              <ul>
-                  <li><code>rbenv exec gem install bundler</code></li>
-              </ul></li>
-          </ul></li>
-          <li><p>Change into the directory and install dependencies with <a href="http://gembundler.com/">bundle</a>.
+          <li><p>Change into the directory.
           <code>
               cd yolkalyzer
-              bundle install
           </code></p></li>
           <li><p>Run the script.
           <code>ruby yolkalyzer.rb mesh/model.dae mesh/fuckedupmodel.dae</code></p></li>
