use threejs viewer

--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
           <p><strong>BITMAP</strong> =&gt; <strong>Satromizer</strong> :: <strong>3D</strong> =&gt; <strong>YOLKALYZER</strong></p>
       </blockquote>
 
-      <figure><iframe width='666' height='500' src='http://3dfile.io/Wf5b1v?embed=true#file-1' frameborder='0'></iframe></figure>
+      <figure><iframe width='666' height='500' src='http://54.235.139.192/openrepo/collada/monster.html' frameborder='0'></iframe></figure>
 
 
 
       <p>turns into </p>
 
-      <figure><iframe width='666' height='500' src='http://3dfile.io/IJs2mk?embed=true#file-1' frameborder='0'></iframe></figure>
+      <figure><iframe width='666' height='500' src='http://54.235.139.192/openrepo/collada/monsterfukd.html' frameborder='0'></iframe></figure>
 
 
 
