added dl links in instructions

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <ol>
           <li><p>Open the <code>Terminal.app</code> and enter the following commands.</p></li>
           <li><p>Clone the repo
-          <code>git clone git://github.com/yyolk/yolkalyzer.git</code></p></li>
+          <code>git clone git://github.com/yyolk/yolkalyzer.git</code></p><p>or</p><p>Download a <a href="https://github.com/yyolk/yolkalyzer/tarball/master">tarball</a> or <a href="https://github.com/yyolk/yolkalyzer/zipball/master">zip</a>.</p></li>
           <li><p>Change into the directory.
           <code>
               cd yolkalyzer
