added youtube howto vid

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
           <li><a href="https://github.com/yyolk/yolkalyzer/tarball/master">Download <strong>TAR Ball</strong></a></li>
           <li><a href="https://github.com/yyolk/yolkalyzer">View On <strong>GitHub</strong></a></li>
         </ul>
+        <iframe width="300" height="315" src="http://www.youtube.com/embed/2SC1noc-LsA" frameborder="0" allowfullscreen></iframe>
       </header>
       <section>
       <h1 id="yolkalyzer">YOLKALYZER</h1>
