update readme add download link to droplet

--- a/index.html
+++ b/index.html
@@ -21,10 +21,9 @@
         <p class="view"><a href="https://github.com/yyolk/yolkalyzer">View the Project on GitHub <small>yyolk/yolkalyzer</small></a></p>
         <ul>
           <li><a href="https://github.com/yyolk/yolkalyzer/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/yyolk/yolkalyzer/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/yyolk/yolkalyzer/archive/droplet.zip">Download <strong>Droplet</strong></a></li>
           <li><a href="https://github.com/yyolk/yolkalyzer">View On <strong>GitHub</strong></a></li>
         </ul>
-        <iframe width="300" height="315" src="http://www.youtube.com/embed/2SC1noc-LsA" frameborder="0" allowfullscreen></iframe>
       </header>
       <section>
       <h1 id="yolkalyzer">YOLKALYZER</h1>
