--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
       <section>
       <h2 id="acolladadaeglitchertexturizer.">A Collada DAE <strong><em>&#8220;glitcher&#8221; / &#8220;texturizer&#8221;</em></strong>.</h2>
 
-      <figure><iframe width='666' height='500' src='http://54.235.139.192/openrepo/collada/monster.html' frameborder='0'></iframe></figure>
+      <figure><iframe width='666' height='500' src='monster.html' frameborder='0'></iframe></figure>
 
 
 
       <p>turns into </p>
 
-      <figure><iframe width='666' height='500' src='http://54.235.139.192/openrepo/collada/monsterfukd.html' frameborder='0'></iframe></figure>
+      <figure><iframe width='666' height='500' src='monsterfukd.html' frameborder='0'></iframe></figure>
 
 
 
